--- a/ProyectoDeAula/Views/Home/RegistrarCliente.cshtml
+++ b/ProyectoDeAula/Views/Home/RegistrarCliente.cshtml
@@ -23,6 +23,10 @@
                     <td><label> Apellido: </label></td>
                     <td><input type="text" style="margin-top: 10px;" name="apellido" /></td>
                 </tr>
+                <tr>
+                    <td><label> Peridoo: </label></td>
+                    <td><input type="text" style="margin-top: 10px;" name="periodo" /></td>
+                </tr>
                 <tr>    
                     <td><label> Cédula: </label></td>
                     <td><input type="text" style="margin-top: 10px;" name="cedula" /></td>
@@ -43,6 +47,10 @@
                 <tr>
                     <td><label> Consumo de agua: </label></td>
                     <td><input type="text" style="margin-top: 10px;" name="consumo_agua" /></td>
+                </tr>
+                <tr>
+                    <td><label> Consumo de gas: </label></td>
+                    <td><input type="text" style="margin-top: 10px;" name="consumo_gas" /></td>
                 </tr>
 
                 <tr>
