--- a/ProyectoDeAula/Views/Home/TablaClientes.cshtml
+++ b/ProyectoDeAula/Views/Home/TablaClientes.cshtml
@@ -54,6 +54,6 @@
 </table>
 
 
-<<form asp-action="Textopago" method="post">
+<form asp-action="Textopago" method="post">
     <button type="submit">suma pagos</button>
 </form>
