--- a/ProyectoDeAula/Views/Home/ActualizarInformacion.cshtml
+++ b/ProyectoDeAula/Views/Home/ActualizarInformacion.cshtml
@@ -48,6 +48,10 @@
             {
                 <table>
                     <tr>
+                        <td><label>Periodo:</label></td>
+                        <td><input type="text" name="cedula" value="@ViewBag.Cliente.periodo" readonly /></td>
+                    </tr>
+                    <tr>
                         <td><label>Cédula:</label></td>
                         <td><input type="text" name="cedula" value="@ViewBag.Cliente.Cedula" readonly /></td>
                     </tr>
@@ -68,8 +72,13 @@
                         <td><input type="text" name="consumoAgua" value="@ViewBag.Cliente.ConsumoAgua" /></td>
                     </tr>
                     <tr>
+                        <td><label>Consumo de Gas:</label></td>
+                        <td><input type="text" name="consumoGas" value="@ViewBag.Cliente.ConsumoGas" readonly /></td>
+                    </tr>
+                    <tr>
                         <td><input type="submit" name="actualizar" value="Actualizar" /></td>
                     </tr>
+                   
                 </table>
             }
         }
