--- a/ProyectoDeAula/Views/Shared/_Layout.cshtml
+++ b/ProyectoDeAula/Views/Shared/_Layout.cshtml
@@ -40,7 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TablaClientes">Clientes</a>
                         </li>
-                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ConsumoGas">Gas</a>
+                        </li>
 
 
                     </ul>
